# ee-toolset

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  attributes.json  ee_toolset.py  pyproject.toml  requirements.in  requirements.txt  roe.json  tables.py  tox.ini
.github/workflows/: tox.yml
app/controls/: __init__.py  app_bar.py  copy_button.py  game_data.py  side_bar.py  thumbs_button.py  typing_animation.py  unit_data.py
app/controls/attributes/: attribute_table.py  buttons.py  snack_bar.py
app/controls/illiana/: chat.py  chat_config.py  chip.py  conversation_starters.py  dropdown.py  file_picker.py  files_container.py  slider.py  text.py
app/core/: ai.py  config.py  constants.py  loader.py  log.py  routing.py  splitter.py  styles.py  vectorstore.py
app/models/: __init__.py  attributes.py  game_data.py  knowledge_base.py
app/tests/models/: test_knowledge_base_unit.py
app/tests/models/data/: knowledge_base.json
app/views/: __init__.py  attributes.py  illiana.py  index.py  view.py
data/knowledge_base/: knowledge_base.json
